--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap");
 
 * {
   box-sizing: border-box;
@@ -15,9 +16,26 @@ body {
 }
 
 .NavBar {
-  height: 50px;
-  background-color: rgba(165, 55, 253, 0.3);
-  font-size: 1.5rem;
+  height: fit-content;
+  background-color: blue;
+
+  position: sticky;
+  float: left;
+  top: 0;
+  width: 100%;
+
+  /* bounding box */
+  margin: 10px;
+  border: 3px solid yellow;
+  padding: 5px;
+
+  display: flex;
+  flex: 1;
+}
+
+.NavBar .NavBar-container {
+  font-size: 2.5rem;
+  font-family: "Neonderthaw", cursive;
 
   /* flexbox */
   display: flex;
@@ -25,11 +43,12 @@ body {
   align-content: center;
   justify-content: center;
   justify-items: center;
+  height: fit-content;
 
   /* bounding box */
-  margin: 5px;
-  border: 5px solid yellow;
-  padding: 5px;
+  margin: 2px;
+  border: 2px solid yellow;
+  padding: 2px;
 }
 
 .title {
@@ -37,12 +56,18 @@ body {
 
   /* flexbox */
   display: flex;
+  flex: 1;
   text-align: center;
   justify-content: center;
   justify-items: center;
   align-content: center;
   align-items: center;
   flex-direction: column;
+
+  /* bounding box */
+  margin: 2px;
+  border: 2px solid orange;
+  padding: 2px;
 }
 
 .centered {
@@ -87,7 +112,7 @@ body {
   /* flexbox */
   display: flex;
   text-align: center;
-  justify-content: center;
+  justify-content: flex-start;
   justify-items: center;
   align-content: center;
   align-items: baseline;
