--- a/src/index.css
+++ b/src/index.css
@@ -25,30 +25,51 @@ body {
   width: 100%;
 
   /* bounding box */
-  margin: 10px;
+  margin: 5px;
   border: 3px solid yellow;
-  padding: 5px;
-
-  display: flex;
-  flex: 1;
+  padding: 2px;
 }
 
 .NavBar .NavBar-container {
-  font-size: 2.5rem;
-  font-family: "Neonderthaw", cursive;
-
   /* flexbox */
   display: flex;
   align-items: center;
   align-content: center;
-  justify-content: center;
+  justify-content: space-between;
   justify-items: center;
   height: fit-content;
 
   /* bounding box */
-  margin: 2px;
-  border: 2px solid yellow;
-  padding: 2px;
+  margin: 3px;
+  border: 3px solid yellow;
+  padding: 3px;
+}
+
+.NavBar .logo {
+  font-size: 2.5rem;
+  font-family: "Neonderthaw", cursive;
+}
+
+.NavBar .NavBar-ul {
+  list-style-type: none;
+  display: flex;
+
+  /* bounding box */
+  margin: 3px;
+  border: 3px solid gold;
+  padding: 3px;
+}
+
+.NavBar .NavBar-ul li {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+
+  /* bounding box */
+  margin: 3px;
+  border: 3px solid gold;
+  padding: 3px;
+  margin-left: 30px;
 }
 
 .title {
@@ -112,11 +133,12 @@ body {
   /* flexbox */
   display: flex;
   text-align: center;
-  justify-content: flex-start;
+  justify-content: center;
   justify-items: center;
   align-content: center;
   align-items: baseline;
   flex-wrap: wrap;
+  flex: 1;
 
   /* bounding box */
   margin: 2px;
