--- a/src/components/DrinksModal.module.css
+++ b/src/components/DrinksModal.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100vh;
   z-index: 10;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.25);
 }
 
 .board {
@@ -35,6 +35,7 @@
 
 .content {
   padding: 1rem;
+  color: black;
 }
 
 .actions {
