--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 
 * {
   box-sizing: border-box;
@@ -13,63 +13,6 @@ body {
   margin: 0;
   background-image: linear-gradient(to left, #323a49, #362c46);
   color: whitesmoke;
-}
-
-.NavBar {
-  height: fit-content;
-  background-color: blue;
-
-  position: sticky;
-  float: left;
-  top: 0;
-  width: 100%;
-
-  /* bounding box */
-  margin: 5px;
-  border: 3px solid yellow;
-  padding: 2px;
-}
-
-.NavBar .NavBar-container {
-  /* flexbox */
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: space-between;
-  justify-items: center;
-  height: fit-content;
-
-  /* bounding box */
-  margin: 3px;
-  border: 3px solid yellow;
-  padding: 3px;
-}
-
-.NavBar .logo {
-  font-size: 2.5rem;
-  font-family: "Neonderthaw", cursive;
-}
-
-.NavBar .NavBar-ul {
-  list-style-type: none;
-  display: flex;
-
-  /* bounding box */
-  margin: 3px;
-  border: 3px solid gold;
-  padding: 3px;
-}
-
-.NavBar .NavBar-ul li {
-  list-style-type: none;
-  display: flex;
-  justify-content: space-evenly;
-
-  /* bounding box */
-  margin: 3px;
-  border: 3px solid gold;
-  padding: 3px;
-  margin-left: 30px;
 }
 
 .title {
