--- a/src/index.css
+++ b/src/index.css
@@ -157,3 +157,7 @@ body {
   box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
   transform: scale(1.05, 1.05);
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
