--- a/src/components/DrinksModal.module.css
+++ b/src/components/DrinksModal.module.css
@@ -18,7 +18,7 @@
 
 .modal {
   position: fixed;
-  top: 30vh;
+  top: 15vh;
   left: 10%;
   width: 80%;
   z-index: 100;
@@ -26,18 +26,47 @@
 }
 
 .header {
-  background: blue;
+  background: #560bad;
   padding: 1rem;
+
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+
+.headerContent {
+  margin-left: 20px;
 }
 
 .header h2 {
   margin: 0;
   color: white;
+  font-size: 2rem;
+}
+
+@media (max-width: 600px) {
+  .header,
+  .headerContent {
+    flex-direction: column;
+  }
 }
 
 .content {
   padding: 1rem;
   color: black;
+
+  display: flex;
+  flex: 1;
+}
+
+.contentLeft {
+  width: 47%;
+}
+
+.contentRight {
+  width: 50%;
+  padding-left: 30px;
+  border-left: 3px dotted #560bad;
 }
 
 .actions {
@@ -46,9 +75,38 @@
   justify-content: flex-end;
 }
 
+.favButton {
+  height: 40px;
+  width: 50px;
+  margin: 5px;
+  padding: 5px;
+  border: none;
+  background-color: transparent;
+  color: white;
+  font-size: 2rem;
+}
+
+.favButton:disabled {
+  filter: grayscale(79%);
+}
+
+.closeButton {
+  position: absolute;
+  top: 2%;
+  height: 50px;
+  margin: 5px;
+  padding: 5px;
+  background-color: transparent;
+  border: none;
+  width: 50px;
+  color: white;
+  font-size: 2rem;
+}
+
 @media (max-width: 600px) {
   .modal {
-    left: calc(50% - 20rem);
-    width: 40rem;
+    top: 25%;
+    left: calc(50% - 10rem);
+    width: 20rem;
   }
 }
