--- a/src/components/CartModal.module.css
+++ b/src/components/CartModal.module.css
@@ -26,7 +26,7 @@
 }
 
 .header {
-  background: #f72585;
+  background: #4361ee;
   padding: 1rem;
 
   display: flex;
@@ -66,7 +66,7 @@
 .contentRight {
   width: 50%;
   padding-left: 30px;
-  border-left: 3px dotted #f72585;
+  border-left: 3px dotted #4361ee;
 }
 
 .actions {
@@ -83,7 +83,7 @@
   border: none;
   background-color: transparent;
   color: white;
-  font-size: 2.2rem;
+  font-size: 2rem;
 }
 
 .cartButton {
@@ -94,7 +94,7 @@
   border: none;
   background-color: transparent;
   color: white;
-  font-size: 2.2rem;
+  font-size: 2rem;
 }
 
 .cartButton:disabled {
