stretch goal? LOL

--- a/src/components/CartResults.module.css
+++ b/src/components/CartResults.module.css
@@ -81,27 +81,6 @@
   font-size: 2rem;
   text-shadow: 2px 2px 0px #000000;
 }
-#rum {
-  background-image: url(https://images.unsplash.com/photo-1575719314727-64ce0e7a03d8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2187&q=80);
-}
-#gin {
-  background-image: url(https://images.unsplash.com/photo-1587747305800-adc0ebe7cf86?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1364&q=80);
-}
-#vodka {
-  background-image: url(https://images.unsplash.com/photo-1595430712287-744ad635e266?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2254&q=80);
-}
-#whiskey {
-  background-image: url(https://images.unsplash.com/photo-1618513033174-cfe319656ea6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80);
-}
-#tequila {
-  background-image: url(https://images.unsplash.com/photo-1533218065445-9c1478886300?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80);
-}
-#brandy {
-  background-image: url(https://images.unsplash.com/photo-1616671293442-ea4255128f78?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-}
-#coffee {
-  background-image: url(https://images.unsplash.com/photo-1562447457-579fc34967fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80);
-}
 ::-webkit-scrollbar {
   display: none;
 }
@@ -117,4 +96,8 @@ a:link {
   color: whitesmoke;
   /* padding-bottom: 0.25rem; */
   border-bottom: 5px dotted whitesmoke;
+}
+
+.ingreList_empty {
+  text-align: center;
 }
