--- a/src/components/CartResults.module.css
+++ b/src/components/CartResults.module.css
@@ -47,6 +47,7 @@
   width: 100%;
   height: 350px;
   overflow-x: scroll;
+  overflow-y: hidden;
   padding: 10px;
   margin: 0;
   margin-bottom: 20px;
